--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,9 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <canvas id="bg"></canvas>
     <div id="root"></div>
+    <canvas id="fg"></canvas>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
